Fix problem that 'flex-wrap: wrap' is applied to add button separately

--- a/src/components/main/frame.module.css
+++ b/src/components/main/frame.module.css
@@ -88,6 +88,7 @@
     margin-top: 75px;
     align-self: flex-start;
     opacity: 0.8;
+    width: 30px;
 }
 
 .closeButton:hover {
